added shader copying to build dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,6 @@ target_link_libraries(${PROJECT_NAME} "glad" "${CMAKE_DL_LIBS}")
 
 # GLM
 target_include_directories(${PROJECT_NAME} PRIVATE "${LIB_DIR}/glm")
+
+# Copy shader files
+file(COPY "${SRC_DIR}/shader" DESTINATION "/")
